--- a/ruff.toml
+++ b/ruff.toml
@@ -3,3 +3,4 @@ ignore = ["INP", "E501", "D10", "D203", "D212", "D213", "D401", "D404", "BLE001"
 unfixable = ["ERA"]
 # Ubuntu 20.04 ships with python3.8:
 target-version = "py38"
+# TODO: update linting
