--- a/config.yaml
+++ b/config.yaml
@@ -50,16 +50,14 @@ exclude_patterns:
     - sh:linux_root/home/*/.Xauthority
     - pf:linux_root/root/.cache
 
+verbosity: 1
 encryption_passphrase: "{encryption_passphrase}"
 compression: zstd,3
 repositories:
     - path: ssh://borg@{server_ip}/./TAM
 borg_base_directory: "{home}"
 archive_name_format: "{server_user}-{now:%Y-%m-%dT%H:%M}"
-skip_actions:
-    - prune
-    - compact
-    - check
+default_actions: false
 
 # Use HPN SSH with some options, as the original user if sudo was used.
 #   sh makes env vars work.
@@ -67,23 +65,27 @@ skip_actions:
 #   As Borg appends parameters to the command, and -c requires quotes, $@ is used. "0" fills $0.
 ssh_command: sh -c 'sudo -u "${SUDO_USER:-$USER}" SSH_AUTH_SOCK="$SSH_AUTH_SOCK" /bin/hpnssh -oBatchMode=yes -oNoneEnabled=yes -oNoneSwitch=yes "$@"' 0
 
-# This runs before create, list, mount, extract, etc.
-before_actions:
-    - /etc/borgmatic/scripts/wakeup_server.sh {server_ip} {server_mac}
+commands:
+    - before: repository
+      run:
+        - /etc/borgmatic/scripts/wakeup_server.sh {server_ip} {server_mac}
 
-before_backup:
-    - /etc/borgmatic/scripts/hooks.sh cleanup
-    - /etc/borgmatic/scripts/hooks.sh before
+    - before: action
+      when: [backup]
+      run:
+        - /etc/borgmatic/scripts/hooks.sh cleanup
+        - /etc/borgmatic/scripts/hooks.sh before
 
-# Runs only if hook and backup didn't errored.
-after_backup:
-    - /etc/borgmatic/scripts/hooks.sh after
+    - after: action
+      when: [backup]
+      states: [finish]
+      run:
+        - /etc/borgmatic/scripts/hooks.sh after
 
-# "after_everything" runs after a create, even if errors occur in hook or backup.
-# Except if the errored hook is "before_everything", so be careful with that one.
-after_everything:
-    - /etc/borgmatic/scripts/hooks.sh cleanup
-before_everything: []
+    - after: action
+      when: [backup]
+      run:
+        - /etc/borgmatic/scripts/hooks.sh cleanup
 
 healthchecks:
     ping_url: "{healthchecks_ping_url}"
