fix: server_user without source

--- a/config.yaml
+++ b/config.yaml
@@ -60,7 +60,7 @@ default_actions: false
 
 # Backup to a temporary archive first, and rename it to a full name only if successful.
 # Otherwise, archives kept by prune could be ones with errors!
-archive_name_format: "${SERVER_USER}[temp]"
+archive_name_format: "{server_user}[temp]"
 
 # Use HPN SSH with some options, as the original user if sudo was used.
 #   sh makes env vars work.
