--- a/config.yaml
+++ b/config.yaml
@@ -62,6 +62,9 @@ default_actions: false
 # Backup to a temporary archive first, and rename it to a full name only if successful.
 # Otherwise, archives kept by prune could be ones with errors!
 archive_name_format: "{server_user}[temp]"
+# Borgmatic tries to be helpful and applies a default filter that matches the format above.
+# Revert it:
+match_archives: "*"
 
 # Use HPN SSH with some options, as the original user if sudo was used.
 #   sh makes env vars work.
