fix: don't forget /boot

--- a/config_example/bupsrcs.cfg
+++ b/config_example/bupsrcs.cfg
@@ -2,5 +2,6 @@ part SSD_MSRSVD /dev/disk/by-partuuid/...
 part SSD_EFI /dev/disk/by-partuuid/...
 part SSD_NTFS /dev/disk/by-partuuid/...
 data HDD_NTFS /dev/disk/by-partuuid/...
+part linux_boot /dev/disk/by-partuuid/...
 linux linux_root /
 linux hdd_ext4 /mnt/1tb/
