--- a/config_example/constants.yaml
+++ b/config_example/constants.yaml
@@ -1,7 +1,8 @@
-server_ip: 192.168.0.63
-server_mac: 11:22:33:44:55:66
-server_user: TAM_2009   # [a-zA-Z0-9_]+ (no dashes)
+server_ip: 192.168.0.63         # or hostname instead of ip if this client is not in server's LAN
+server_mac: 11:22:33:44:55:66   # or empty if this client is not in server's LAN
+server_user: TAM_2009           # [a-zA-Z0-9_]+ (no dashes)
 server_repo: TAM
+repo_id: 0123456789abcdef       # Obtain this with "grep id ~/TAM/config" in server, or from the config in another computer.
 encryption_passphrase: pass     # Use scripts/derive_pass.py, or set to ${BORG_PASSPHRASE} if it shouldn't be stored in this computer.
-home: /home/user    # Because "/home/${SUDO_USER:-$USER}" doesn't work
+home: /home/user                # Because "/home/${SUDO_USER:-$USER}" doesn't work
 healthchecks_ping_url: https://hc-ping.com/your-uuid-here  # Or null
